--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,22 @@
 [egg_info]
 tag_build = 
 tag_date = true
+
+[extract_messages]
+output_file = tracfullblog/locale/messages.pot
+keywords =  _ #ngettext:1,2 N_ tag_
+width = 72
+
+[init_catalog]
+input_file = tracfullblog/locale/messages.pot
+output_dir = tracfullblog/locale/
+domain = tracfullblog
+
+[compile_catalog]
+directory = tracfullblog/locale/
+domain = tracfullblog
+
+[update_catalog]
+input_file = tracfullblog/locale/messages.pot
+output_dir = tracfullblog/locale/
+domain = tracfullblog
